--- a/client/src/i18n/locales/pages/dashboard.json
+++ b/client/src/i18n/locales/pages/dashboard.json
@@ -8,5 +8,6 @@
 	"reporter": "Reporter",
 	"recordedDate": "Recorded Date",
 	"lastUpdatedBy": "Last Updated By",
-	"status": "Status"
+	"status": "Status",
+	"actions": "Actions"
 }
