removed redundant event prefix from labels

--- a/client/src/i18n/locales/pages/events.json
+++ b/client/src/i18n/locales/pages/events.json
@@ -1,9 +1,9 @@
 {
 	"title": "Events",
 	"id": "ID",
-	"eventDate": "Event Date",
-	"eventType": "Event Type",
-	"eventSubtype": "Event Subtype",
+	"eventDate": "Date",
+	"eventType": "Type",
+	"eventSubtype": "Subtype",
 	"location": "Location",
 	"reporter": "Reporter",
 	"recordedDate": "Recorded Date",
