--- a/client/src/i18n/locales/components/buttons.json
+++ b/client/src/i18n/locales/components/buttons.json
@@ -3,6 +3,7 @@
 	"cancel": "Cancel",
 	"save": "Save",
 	"delete": "Delete",
+	"view": "View",
 	"edit": "Edit",
 	"add": "Add",
 	"login": "Login",
