--- a/client/src/i18n/locales/errors/errors.json
+++ b/client/src/i18n/locales/errors/errors.json
@@ -1,5 +1,6 @@
 {
 	"rootElementNotFound": "Root element not found",
 	"useAuthMustBeUsedWithinAuthProvider": "useAuth must be used within an AuthProvider",
-	"invalidDateInput": "Invalid date"
+	"invalidDateInput": "Invalid date",
+	"unknownErrorOccurred": "An unknown error occurred"
 }
