modified redux path

--- a/client/src/i18n/locales/errors/errors.json
+++ b/client/src/i18n/locales/errors/errors.json
@@ -2,5 +2,6 @@
 	"rootElementNotFound": "Root element not found",
 	"useAuthMustBeUsedWithinAuthProvider": "useAuth must be used within an AuthProvider",
 	"invalidDateInput": "Invalid date",
-	"unknownErrorOccurred": "An unknown error occurred"
+	"unknownErrorOccurred": "An unknown error occurred",
+	"genericError": "An error occurred"
 }
