--- a/client/src/i18n/locales/common/common.json
+++ b/client/src/i18n/locales/common/common.json
@@ -53,6 +53,11 @@
 		"loading": "Loading...",
 		"success": "Success",
 		"error": "Error",
-		"notAvailable": "Not Available"
+		"notAvailable": "Not Available",
+		"na": "N/A",
+		"expired": "Expired",
+		"expires": "Expires",
+		"invalid": "Invalid",
+		"required": "Required"
 	}
 }
