--- a/client/src/i18n/locales/errors/errors.json
+++ b/client/src/i18n/locales/errors/errors.json
@@ -3,5 +3,6 @@
 	"useAuthMustBeUsedWithinAuthProvider": "useAuth must be used within an AuthProvider",
 	"invalidDateInput": "Invalid date",
 	"unknownErrorOccurred": "An unknown error occurred",
-	"genericError": "An error occurred"
+	"genericError": "An error occurred",
+	"parentIdRequired": "Parent ID is required or entity data will be an orphaned record"
 }
