--- a/client/src/i18n/locales/pages/vehicles.json
+++ b/client/src/i18n/locales/pages/vehicles.json
@@ -34,9 +34,11 @@
 	},
 	"titles": {
 		"parent": "Parent Record",
+		"description": "Description",
 		"occupants": "Occupants",
 		"registration": "Registration",
 		"insurance": "Insurance",
+		"legality": "Legality",
 		"illegalModifications": "Illegal Modifications"
 	},
 	"header": {
