i18n, reqs and funcs for vehicle form

--- a/client/src/i18n/locales/pages/vehicles.json
+++ b/client/src/i18n/locales/pages/vehicles.json
@@ -32,6 +32,13 @@
 			"description": "Description"
 		}
 	},
+	"placeholders": {
+		"make": "Select a Vehcile Make",
+		"model": "Select Vehicle Model",
+		"color": "Select a Vehcile Color",
+		"driver": "Select a Driver",
+		"owner": "Select a Vehicle Owner"
+	},
 	"titles": {
 		"parent": "Parent Record",
 		"description": "Description",
