finished i18next conversion: need to test

--- a/client/src/i18n/locales/en/pages/events.json
+++ b/client/src/i18n/locales/en/pages/events.json
@@ -39,7 +39,8 @@
 		"submitted": "Submitted",
 		"type": "Type",
 		"details": "Details",
-		"location": "Location"
+		"location": "Location",
+		"dates": "Dates"
 	},
 	"header": {
 		"title": {
