--- a/client/src/i18n/locales/es/pages/about.json
+++ b/client/src/i18n/locales/es/pages/about.json
@@ -1,5 +1,5 @@
 {
-	"aboutUs": "About Us",
-	"ourStory": "Our Story",
-	"meetTheTeam": "Meet the Team"
+	"aboutUs": "Sobre nosotros",
+	"ourStory": "Nuestra historia",
+	"meetTheTeam": "Conoce al equipo"
 }
