--- a/client/src/i18n/locales/es/pages/events.json
+++ b/client/src/i18n/locales/es/pages/events.json
@@ -1,71 +1,71 @@
 {
 	"fields": {
 		"id": "ID",
-		"status": "Status",
+		"status": "Estado",
 		"reported": {
-			"reporter": "Reported By",
-			"reportedDate": "Reported Date"
+			"reporter": "Reportado Por",
+			"reportedDate": "Fecha de Reporte"
 		},
 		"updated": {
-			"updatedBy": "Updated By",
-			"updatedDate": "Updated Date"
+			"updatedBy": "Actualizado Por",
+			"updatedDate": "Fecha de Actualización"
 		},
 		"submitted": {
-			"submittedBy": "Submitted By",
-			"submittedDate": "Submitted Date"
+			"submittedBy": "Enviado Por",
+			"submittedDate": "Fecha de Envío"
 		},
 		"type": {
-			"eventType": "Event Type",
-			"eventSubType": "Event Sub Type"
+			"eventType": "Tipo de Evento",
+			"eventSubType": "Subtipo de Evento"
 		},
 		"details": {
-			"title": "Title",
-			"description": "Description",
-			"tagging": "Tagging",
-			"methodOfReceipt": "Method of Receipt"
+			"title": "Título",
+			"description": "Descripción",
+			"tagging": "Etiquetado",
+			"methodOfReceipt": "Método de Recepción"
 		},
 		"location": {
-			"address": "Address",
-			"city": "City",
-			"zip": "Zip",
-			"country": "Country",
-			"county": "County",
-			"state": "State"
+			"address": "Dirección",
+			"city": "Ciudad",
+			"zip": "Código Postal",
+			"country": "País",
+			"county": "Condado",
+			"state": "Estado"
 		}
 	},
 	"titles": {
-		"reported": "Reported",
-		"updated": "Updated",
-		"submitted": "Submitted",
-		"type": "Type",
-		"details": "Details",
-		"location": "Location",
-		"dates": "Dates"
+		"reported": "Reportado",
+		"updated": "Actualizado",
+		"submitted": "Enviado",
+		"type": "Tipo",
+		"details": "Detalles",
+		"location": "Ubicación",
+		"dates": "Fechas"
 	},
 	"header": {
 		"title": {
-			"new": "New Event",
-			"edit": "Edit Event",
-			"all": "All Events",
-			"single": "Event"
+			"new": "Nuevo Evento",
+			"edit": "Editar Evento",
+			"all": "Todos los Eventos",
+			"single": "Evento"
 		},
 		"subtitle": {
-			"new": "Create a new event record",
-			"edit": "Edit an existing event record",
-			"all": "View all event records",
-			"single": "View a single event record"
+			"new": "Crear un nuevo registro de evento",
+			"edit": "Editar un registro de evento existente",
+			"all": "Ver todos los registros de evento",
+			"single": "Ver un solo registro de evento"
 		},
 		"content": {
-			"total": "Total Events",
-			"status": "Status"
+			"total": "Total de Eventos",
+			"status": "Estado"
 		}
 	},
 	"buttons": {
-		"new": "New Event",
-		"edit": "Edit Event",
-		"delete": "Delete Event",
-		"save": "Save Event",
-		"update": "Update Event",
-		"view": "View Event"
+		"new": "Nuevo Evento",
+		"edit": "Editar Evento",
+		"delete": "Eliminar Evento",
+		"save": "Guardar Evento",
+		"update": "Actualizar Evento",
+		"view": "Ver Evento"
 	}
 }
