--- a/client/src/i18n/locales/es/pages/user.json
+++ b/client/src/i18n/locales/es/pages/user.json
@@ -1,13 +1,13 @@
 {
-	"profile": "Profile",
-	"login": "Login",
-	"register": "Register",
-	"logout": "Logout",
-	"username": "Username",
-	"password": "Password",
-	"confirmPassword": "Confirm Password",
-	"forgotPassword": "Forgot Password",
-	"resetPassword": "Reset Password",
-	"updateProfile": "Update Profile",
-	"deleteAccount": "Delete Account"
+	"profile": "Perfil",
+	"login": "Iniciar sesión",
+	"register": "Registrarse",
+	"logout": "Cerrar sesión",
+	"username": "Nombre de usuario",
+	"password": "Contraseña",
+	"confirmPassword": "Confirmar contraseña",
+	"forgotPassword": "Olvidé mi contraseña",
+	"resetPassword": "Restablecer contraseña",
+	"updateProfile": "Actualizar perfil",
+	"deleteAccount": "Eliminar cuenta"
 }
