--- a/client/src/i18n/locales/es/pages/vehicles.json
+++ b/client/src/i18n/locales/es/pages/vehicles.json
@@ -2,75 +2,75 @@
 	"fields": {
 		"id": "ID",
 		"parent": {
-			"id": "Parent ID",
-			"name": "Parent Name"
+			"id": "ID del Padre",
+			"name": "Nombre del Padre"
 		},
-		"make": "Make",
-		"model": "Model",
-		"year": "Year",
+		"make": "Marca",
+		"model": "Modelo",
+		"year": "Año",
 		"color": "Color",
-		"vin": "VIN Number",
+		"vin": "Número de VIN",
 		"occupants": {
-			"driver": "Driver Name",
-			"passengers": "Passenger Names"
+			"driver": "Nombre del Conductor",
+			"passengers": "Nombres de los Pasajeros"
 		},
 		"registration": {
-			"owner": "Owner Name",
-			"plateNumber": "Plate Number",
-			"expirationDate": "Expiration Date",
-			"state": "State"
+			"owner": "Nombre del Propietario",
+			"plateNumber": "Número de Placa",
+			"expirationDate": "Fecha de Vencimiento",
+			"state": "Estado"
 		},
 		"insurance": {
-			"policyNumber": "Policy Number",
-			"provider": "Provider",
-			"expirationDate": "Expiration Date",
-			"insured": "Insured"
+			"policyNumber": "Número de Póliza",
+			"provider": "Proveedor",
+			"expirationDate": "Fecha de Vencimiento",
+			"insured": "Asegurado"
 		},
-		"stolen": "Was Stolen",
+		"stolen": "Fue Robado",
 		"illegalModifications": {
-			"wasModified": "Was Modified",
-			"description": "Description"
+			"wasModified": "Fue Modificado",
+			"description": "Descripción"
 		}
 	},
 	"placeholders": {
-		"make": "Select a Vehcile Make",
-		"model": "Select Vehicle Model",
-		"color": "Select a Vehcile Color",
-		"driver": "Select a Driver",
-		"owner": "Select a Vehicle Owner"
+		"make": "Selecciona una Marca de Vehículo",
+		"model": "Selecciona el Modelo del Vehículo",
+		"color": "Selecciona un Color de Vehículo",
+		"driver": "Selecciona un Conductor",
+		"owner": "Selecciona un Propietario de Vehículo"
 	},
 	"titles": {
-		"parent": "Parent Record",
-		"description": "Description",
-		"occupants": "Occupants",
-		"registration": "Registration",
-		"insurance": "Insurance",
-		"legality": "Legality",
-		"illegalModifications": "Illegal Modifications"
+		"parent": "Registro del Padre",
+		"description": "Descripción",
+		"occupants": "Ocupantes",
+		"registration": "Registro",
+		"insurance": "Seguro",
+		"legality": "Legalidad",
+		"illegalModifications": "Modificaciones Ilegales"
 	},
 	"header": {
 		"title": {
-			"new": "New Vehicle",
-			"edit": "Edit Vehicle",
-			"all": "All Vehicles",
-			"single": "Vehicle"
+			"new": "Nuevo Vehículo",
+			"edit": "Editar Vehículo",
+			"all": "Todos los Vehículos",
+			"single": "Vehículo"
 		},
 		"subtitle": {
-			"new": "Create a new vehicle record",
-			"edit": "Edit an existing vehicle record",
-			"all": "View all vehicle records",
-			"single": "View a single vehicle record"
+			"new": "Crear un nuevo registro de vehículo",
+			"edit": "Editar un registro de vehículo existente",
+			"all": "Ver todos los registros de vehículo",
+			"single": "Ver un solo registro de vehículo"
 		},
 		"content": {
-			"total": "Total Vehicles"
+			"total": "Total de Vehículos"
 		}
 	},
 	"buttons": {
-		"new": "New Vehicle",
-		"edit": "Edit Vehicle",
-		"delete": "Delete Vehicle",
-		"save": "Save Vehicle",
-		"update": "Update Vehicle",
-		"view": "View Vehicle"
+		"new": "Nuevo Vehículo",
+		"edit": "Editar Vehículo",
+		"delete": "Eliminar Vehículo",
+		"save": "Guardar Vehículo",
+		"update": "Actualizar Vehículo",
+		"view": "Ver Vehículo"
 	}
 }
