--- a/client/src/i18n/locales/fr/pages/about.json
+++ b/client/src/i18n/locales/fr/pages/about.json
@@ -1,5 +1,5 @@
 {
-	"aboutUs": "About Us",
-	"ourStory": "Our Story",
-	"meetTheTeam": "Meet the Team"
+	"aboutUs": "À propos de nous",
+	"ourStory": "Notre histoire",
+	"meetTheTeam": "Rencontrez l'équipe"
 }
