--- a/client/src/i18n/locales/fr/pages/contact.json
+++ b/client/src/i18n/locales/fr/pages/contact.json
@@ -1,7 +1,7 @@
 {
-	"contactUs": "Contact Us",
-	"name": "Name",
-	"email": "Email",
+	"contactUs": "Contactez-nous",
+	"name": "Nom",
+	"email": "E-mail",
 	"message": "Message",
-	"send": "Send"
+	"send": "Envoyer"
 }
