--- a/client/src/i18n/locales/fr/common/common.json
+++ b/client/src/i18n/locales/fr/common/common.json
@@ -1,72 +1,72 @@
 {
 	"buttons": {
-		"submit": "Submit",
-		"cancel": "Cancel",
-		"save": "Save",
-		"delete": "Delete",
-		"view": "View",
-		"edit": "Edit",
-		"add": "Add",
-		"login": "Login",
-		"logout": "Logout",
-		"register": "Register",
-		"forgotPassword": "Forgot Password",
-		"resetPassword": "Reset Password",
-		"changePassword": "Change Password"
+		"submit": "Soumettre",
+		"cancel": "Annuler",
+		"save": "Enregistrer",
+		"delete": "Supprimer",
+		"view": "Voir",
+		"edit": "Modifier",
+		"add": "Ajouter",
+		"login": "Connexion",
+		"logout": "Déconnexion",
+		"register": "S'inscrire",
+		"forgotPassword": "Mot de passe oublié",
+		"resetPassword": "Réinitialiser le mot de passe",
+		"changePassword": "Changer le mot de passe"
 	},
 	"tables": {
 		"actions": "Actions",
-		"view": "View",
-		"edit": "Edit",
-		"delete": "Delete"
+		"view": "Voir",
+		"edit": "Modifier",
+		"delete": "Supprimer"
 	},
 	"prepositions": {
-		"of": "of",
-		"for": "for",
-		"by": "by",
-		"on": "on",
-		"at": "at",
-		"in": "in",
-		"to": "to",
-		"with": "with",
-		"from": "from",
-		"about": "about",
-		"into": "into",
-		"after": "after",
-		"before": "before",
-		"under": "under",
-		"over": "over",
-		"between": "between"
+		"of": "de",
+		"for": "pour",
+		"by": "par",
+		"on": "sur",
+		"at": "à",
+		"in": "dans",
+		"to": "à",
+		"with": "avec",
+		"from": "de",
+		"about": "sur",
+		"into": "dans",
+		"after": "après",
+		"before": "avant",
+		"under": "sous",
+		"over": "sur",
+		"between": "entre"
 	},
 	"interrogatives": {
-		"what": "What",
-		"who": "Who",
-		"where": "Where",
-		"when": "When",
-		"why": "Why",
-		"how": "How"
+		"what": "Qu'est-ce que",
+		"who": "Qui",
+		"where": "Où",
+		"when": "Quand",
+		"why": "Pourquoi",
+		"how": "Comment"
 	},
 	"forms": {
-		"requiredDisclaimer": "All fields marker with an asterisk (*) are required",
-		"vehiclesRequireEntities": "* Entitites are required before adding a vehicle"
+		"requiredDisclaimer": "Tous les champs marqués d'une astérisque (*) sont obligatoires",
+		"vehiclesRequireEntities": "* Les entités sont requises avant d'ajouter un véhicule"
 	},
 	"statusIndicator": {
-		"loading": "Loading...",
-		"success": "Success",
-		"error": "Error",
-		"notAvailable": "Not Available",
+		"loading": "Chargement...",
+		"success": "Succès",
+		"error": "Erreur",
+		"notAvailable": "Non disponible",
 		"na": "N/A",
-		"expired": "Expired",
-		"expires": "Expires",
-		"invalid": "Invalid",
-		"required": "Required"
+		"expired": "Expiré",
+		"expires": "Expire",
+		"invalid": "Invalide",
+		"required": "Requis"
 	},
 	"boolean": {
-		"yes": "Yes",
-		"no": "No",
-		"true": "True",
-		"false": "False",
-		"on": "On",
-		"off": "Off"
+		"yes": "Oui",
+		"no": "Non",
+		"true": "Vrai",
+		"false": "Faux",
+		"on": "Activé",
+		"off": "Désactivé"
 	}
 }
