--- a/client/src/i18n/locales/fr/pages/entities.json
+++ b/client/src/i18n/locales/fr/pages/entities.json
@@ -2,102 +2,102 @@
 	"fields": {
 		"id": "ID",
 		"parent": {
-			"id": "Parent ID",
-			"name": "Parent Name"
+			"id": "ID Parent",
+			"name": "Nom du Parent"
 		},
-		"type": "Entity Type",
+		"type": "Type d'Entité",
 		"person": {
 			"name": {
-				"first": "First Name",
-				"middle": "Middle Name",
-				"last": "Last Name",
-				"suffix": "Suffix"
+				"first": "Prénom",
+				"middle": "Deuxième Prénom",
+				"last": "Nom de Famille",
+				"suffix": "Suffixe"
 			},
-			"dob": "Date of Birth",
-			"age": "Age",
-			"nativeLanguage": "Native Language",
+			"dob": "Date de Naissance",
+			"age": "Âge",
+			"nativeLanguage": "Langue Maternelle",
 			"identification": {
-				"ssn": "Social Security Number",
-				"passportCountry": "Passport Country",
-				"passportNumber": "Passport Number",
-				"driverLicenseState": "Driver License State",
-				"driverLicenseNumber": "Driver License Number",
-				"nationalIdNumber": "National ID Number",
-				"visaType": "Visa Type",
-				"visaExpiryDate": "Visa Expiry Date",
-				"isIllegalResident": "Is Illegal Resident",
-				"illegalStatusDescription": "Illegal Status Description"
+				"ssn": "Numéro de Sécurité Sociale",
+				"passportCountry": "Pays du Passeport",
+				"passportNumber": "Numéro de Passeport",
+				"driverLicenseState": "État du Permis de Conduire",
+				"driverLicenseNumber": "Numéro de Permis de Conduire",
+				"nationalIdNumber": "Numéro d'Identification National",
+				"visaType": "Type de Visa",
+				"visaExpiryDate": "Date d'Expiration du Visa",
+				"isIllegalResident": "Résident Illégal",
+				"illegalStatusDescription": "Description du Statut Illégal"
 			},
 			"employment": {
-				"jobTitle": "Job Title",
-				"department": "Department",
-				"employeeId": "Employee ID",
-				"hireDate": "Hire Date",
-				"employmentStatus": "Employment Status"
+				"jobTitle": "Titre du Poste",
+				"department": "Département",
+				"employeeId": "ID de l'Employé",
+				"hireDate": "Date d'Embauche",
+				"employmentStatus": "Statut d'Emploi"
 			}
 		},
 		"organization": {
-			"contactName": "Contact Name",
+			"contactName": "Nom de Contact",
 			"legal": {
-				"legalName": "Legal Name",
-				"legalEntityType": "Legal Entity Type",
-				"legalStatus": "Legal Status",
-				"incorporationDate": "Incorporation Date",
-				"businessRegistrationNumber": "Business Registration Number"
+				"legalName": "Raison Sociale",
+				"legalEntityType": "Type d'Entité Légale",
+				"legalStatus": "Statut Légal",
+				"incorporationDate": "Date d'Incorporation",
+				"businessRegistrationNumber": "Numéro d'Immatriculation Commerciale"
 			}
 		},
 		"contact": {
-			"phone": "Phone Number",
-			"email": "Email Address",
-			"socialMedia": "Social Media"
+			"phone": "Numéro de Téléphone",
+			"email": "Adresse Email",
+			"socialMedia": "Médias Sociaux"
 		},
 		"address": {
-			"address": "Street Address",
-			"city": "City",
-			"state": "State",
-			"zip": "Zip Code",
-			"zipNan": "Zip code must be a number",
-			"county": "County",
-			"country": "Country"
+			"address": "Adresse",
+			"city": "Ville",
+			"state": "État",
+			"zip": "Code Postal",
+			"zipNan": "Le code postal doit être un nombre",
+			"county": "Comté",
+			"country": "Pays"
 		}
 	},
 	"titles": {
 		"information": "Information",
-		"parent": "Parent Record",
-		"person": "Person",
-		"name": "Name",
+		"parent": "Enregistrement Parent",
+		"person": "Personne",
+		"name": "Nom",
 		"identification": "Identification",
-		"passport": "Passport",
-		"driverLicense": "Driver License",
-		"employment": "Employment",
-		"organization": "Organization",
-		"legal": "Legal",
-		"contact": "Contact Information",
-		"location": "Location"
+		"passport": "Passeport",
+		"driverLicense": "Permis de Conduire",
+		"employment": "Emploi",
+		"organization": "Organisation",
+		"legal": "Légal",
+		"contact": "Informations de Contact",
+		"location": "Emplacement"
 	},
 	"header": {
 		"title": {
-			"new": "New Entity",
-			"edit": "Edit Entity",
-			"all": "All Entities",
-			"single": "Entity"
+			"new": "Nouvelle Entité",
+			"edit": "Éditer l'Entité",
+			"all": "Toutes les Entités",
+			"single": "Entité"
 		},
 		"subtitle": {
-			"new": "Create a new entity record",
-			"edit": "Edit an existing entity record",
-			"all": "View all entity records",
-			"single": "View a single entity record"
+			"new": "Créer un nouvel enregistrement d'entité",
+			"edit": "Modifier un enregistrement d'entité existant",
+			"all": "Voir tous les enregistrements d'entité",
+			"single": "Voir un seul enregistrement d'entité"
 		},
 		"content": {
-			"total": "Total Entities"
+			"total": "Total des Entités"
 		}
 	},
 	"buttons": {
-		"new": "New Entity",
-		"edit": "Edit Entity",
-		"delete": "Delete Entity",
-		"save": "Save Entity",
-		"update": "Update Entity",
-		"view": "View Entity"
+		"new": "Nouvelle Entité",
+		"edit": "Éditer l'Entité",
+		"delete": "Supprimer l'Entité",
+		"save": "Enregistrer l'Entité",
+		"update": "Mettre à Jour l'Entité",
+		"view": "Voir l'Entité"
 	}
 }
